welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:6: error: value ! is not a member of Boolean
do {avance() } while (!croisement!)
                                 ^